[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "blendss"
authors = [
    {name = "Zachary Roy", email = "zachary.roy@water.ca.gov" }
]
description = "Combine multiple DSS files into one for post-processing, and model comparison."
readme = "README.md"
license = {text = "MIT" }
version = "0.1.0"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandss"
]


[project.scripts]
cli = "blendss:cli"


[tool.setuptools]
include-package-data = true
