[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "blendss"
authors = [
    {name = "Zachary Roy", email = "zachary.roy@water.ca.gov"}
]
description = "Combine multiple DSS files into one for post-processing, and model comparison."
readme = "README.md"
license = {text = "MIT" }
version = "0.1.1"
classifiers = [
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandss"
]

[project.scripts]
blendss = "blendss.cli:cli"

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib", 
    "--strict-markers",
]
pythonpath = "./src"
